--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss-easy-import": "^3.0.0",
     "postcss-mixins": "^6.2.3",
     "postcss-preset-env": "^6.7.0",
+    "slick-carousel": "^1.8.1",
     "stylelint": "^13.0.0"
   },
   "devDependencies": {
