--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "cherry-grid": "0.1.8",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
+    "dev-ip": "^1.0.1",
     "eslint": "^6.8.0",
     "fancy-log": "^1.3.3",
+    "glider-js": "^1.7.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
