--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^6.8.0",
     "fancy-log": "^1.3.3",
     "glider-js": "^1.7.3",
+    "gsap": "^3.2.6",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
@@ -66,6 +67,7 @@
     "postcss-easy-import": "^3.0.0",
     "postcss-mixins": "^6.2.3",
     "postcss-preset-env": "^6.7.0",
+    "scrollmagic": "^2.0.7",
     "slick-carousel": "^1.8.1",
     "stylelint": "^13.0.0"
   },
