--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-vinyl-zip": "^2.2.0",
     "jquery": "^3.4.1",
+    "mapbox-gl": "^1.12.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-mixins": "^6.2.3",
     "postcss-preset-env": "^6.7.0",
