--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "jquery": "^3.4.1",
     "lottie-web": "^5.7.3",
     "mapbox-gl": "^1.12.0",
+    "masonry-layout": "^4.2.2",
+    "packery": "^2.1.2",
     "postcss-easy-import": "^3.0.0",
     "postcss-mixins": "^6.2.3",
     "postcss-preset-env": "^6.7.0",
